--- a/index.ipynb
+++ b/index.ipynb
@@ -18,8 +18,10 @@
     "Aviation accidents have been a major issue in the industry. As the team envisions to invest in the industry, understanding major issues related to  previous accidents is a step foward to ensuring a smart move into the industry. \n",
     "\n",
     "This analysis dives deep into these aspects\n",
-    " A non- technical presentation for this analysis here\n",
-    " A tableau presentation is here"
+    "\n",
+    " A non- technical presentation for this analysis (here)[\n",
+    " \n",
+    " A tableau presentation is [here](https://public.tableau.com/app/profile/simon.irungu/viz/aviationdataanalysis/Dashboard1?publish=yes)"
    ]
   },
   {
