--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This analysis dives deep into these aspects\n",
     "\n",
-    " A non- technical presentation for this analysis (here)[\n",
+    " A non- technical presentation for this analysis [here](https://github.com/simonirungu/project_1/blob/main/presentation.pdf)\n",
     " \n",
     " A tableau presentation is [here](https://public.tableau.com/app/profile/simon.irungu/viz/aviationdataanalysis/Dashboard1?publish=yes)"
    ]
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "706c4ed0-4bd1-4e56-97da-ca7016c5567f",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "df34fed6-a7df-42bc-8abe-a92004241861",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9ef8224b-993d-4124-b685-40ab6743a7bf",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        " 'Weather.Condition']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "adafd63b-294b-4b35-bae0-ed266fe98888",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "4              0.0               VMC  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "685b3b2d-5c60-4eb8-ade7-81bfe3cfa50f",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "8e70afdb-2574-4e27-9b90-3a5ac6e5e607",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1321,7 @@
        "4          Airplane              0.0               IMC  2006  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "7258987e-a162-4e74-b723-ab8c1f44e957",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "b8f4ea78-ef89-47b0-9e04-08832be6fb5c",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1761,7 @@
        "[16797 rows x 20 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "6831391d-28ed-4044-a651-d3f8adbebb39",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "622002a8-de7f-4b1d-907b-562d368ed2b0",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "id": "a18296ca-8f6f-4895-ad18-4249cf1f6447",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1865,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "id": "27ee99df-1b04-4df8-b8d5-7d78a25bc847",
    "metadata": {},
    "outputs": [
@@ -1887,7 +1887,7 @@
        "16797"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 56,
    "id": "18ffb4ed-21ff-40f5-bdd2-ca43e09b5057",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "id": "4fbe5710-80c8-4149-9651-380235a1e06c",
    "metadata": {},
    "outputs": [],
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "id": "6a7efa72-1772-404f-8a88-9fc2dd07ff40",
    "metadata": {},
    "outputs": [],
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "id": "216bfd00-6c13-4b83-a50c-336b01fd54d0",
    "metadata": {},
    "outputs": [
@@ -2361,7 +2361,7 @@
        "[16797 rows x 22 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "id": "0e3eed72-06ab-4a6c-b01e-4db849361920",
    "metadata": {},
    "outputs": [
@@ -2404,7 +2404,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2431,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "id": "37a06faf-9504-4bcf-bda0-3c79627d1c25",
    "metadata": {},
    "outputs": [
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "id": "78508512-e9f6-4a71-85f1-2094b630f28a",
    "metadata": {},
    "outputs": [
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 75,
    "id": "a78a9427-1b56-4257-8dee-8ff401e2c76b",
    "metadata": {},
    "outputs": [
@@ -2545,7 +2545,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 76,
    "id": "fe27ccb4-8d2a-41bd-b3f1-d3255b81b081",
    "metadata": {},
    "outputs": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 77,
    "id": "22a9518f-4b24-490c-889f-80eec51aa3cd",
    "metadata": {},
    "outputs": [],
